--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -14,9 +13,18 @@
  <body>
 
     <div id="body">
-    <div id="feedControl">Loading...</div>
+    <div id="feedControl">Loading...
+    </div>
 
+<script type="text/javascript">
+ function load() {
+ var feed="http://feeds.bbci.co.uk/news/world/rss.xml";
+new GFdynamicfeedcontrol(feed, "feedControl");
+}
+ google.load("feeds", "1"); //1 refers to version 1
+ google.setOnLoadCallback(load); //processes the feed when the page loads
 
-  </div>
+ </script>
+
 </body>
 </html>
